<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/warung_gokil"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_makanan"
        android:textSize="20dp"
        android:layout_marginTop="30dp"/>

    <RadioGroup
        android:id="@+id/rg_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/rbtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nasi_goreng"/>

        <RadioButton
            android:id="@+id/rbtn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mie_goreng"/>

        <RadioButton
            android:id="@+id/rbtn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mie_rebus"/>

        <RadioButton
            android:id="@+id/rbtn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nasi_uduk"/>

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_minuman"
        android:textSize="20dp"
        android:layout_marginTop="10dp"/>

    <RadioGroup
        android:id="@+id/rg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbtn5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teh_es"/>

        <RadioButton
            android:id="@+id/rbtn6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/es_jeruk"
            android:layout_marginLeft="20dp"/>

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jumlah_porsi"
        android:layout_marginTop="20dp"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/ed1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pesan"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

</LinearLayout>